--- a/requirements.txt
+++ b/requirements.txt
@@ -1,56 +1,10 @@
-absl-py==0.9.0
-astor==0.8.1
-attrs==19.3.0
-cachetools==4.0.0
-certifi==2019.11.28
-chardet==3.0.4
-cloudpickle==1.3.0
-cycler==0.10.0
-decorator==4.4.2
-dill==0.3.1.1
-future==0.18.2
-gast==0.2.2
-google-auth==1.11.2
-google-auth-oauthlib==0.4.1
-google-pasta==0.1.8
-googleapis-common-protos==1.51.0
-grpcio==1.27.2
-h5py==2.10.0
-idna==2.9
-joblib==0.14.1
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.0
-kiwisolver==1.1.0
-Markdown==3.2.1
-matplotlib==3.2.0
-numpy==1.18.1
-oauthlib==3.1.0
-opt-einsum==3.2.0
-pandas==1.0.2
-promise==2.3
-protobuf==3.11.3
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pyparsing==2.4.6
-python-dateutil==2.8.1
-pytz==2019.3
-rarfile==3.1
-requests==2.23.0
-requests-oauthlib==1.3.0
-rsa==4.0
-scikit-learn==0.22.2.post1
-scipy==1.4.1
-seaborn==0.10.0
-six==1.14.0
-sklearn==0.0
-tensorboard==2.1.1
-tensorflow==2.1.0
-tensorflow-datasets==2.1.0
-tensorflow-estimator==2.1.0
-tensorflow-metadata==0.21.1
-tensorflow-probability==0.9.0
-termcolor==1.1.0
-tqdm==4.43.0
-urllib3==1.25.8
-Werkzeug==1.0.0
-wrapt==1.12.0
+numpy>=1.15
+orthpol_light>=1.0.1
+scipy
+SpectralToolbox>=1.0.7
+dill
+scikit-sparse
+sortedcontainers
+semilattices
+tqdm
+fasteners
